--- a/resources/chs.ini
+++ b/resources/chs.ini
@@ -5,6 +5,7 @@
 # Popup when entering a plot
 popup=你来到了领地 {%0}
 popup.owner=这个领地的领主为 {%0}
+popup.available=这个领地是无主的,请用/p claim来领取
 
 # /p info
 command.name=plot
